--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@govuk-prototype-kit/common-templates": "2.0.1",
     "@govuk-prototype-kit/task-list": "2.0.0",
+    "@x-govuk/govuk-prototype-components": "^3.0.5",
     "govuk-frontend": "5.3.1",
     "govuk-prototype-kit": "13.16.2",
     "notifications-node-client": "8.0.0",
