checked frontend install

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "dependencies": {
     "@govuk-prototype-kit/task-list": "2.0.0",
     "@x-govuk/govuk-prototype-components": "^3.0.5",
-    "govuk-frontend": "5.4.0",
+    "govuk-frontend": "^5.4.0",
     "govuk-prototype-kit": "13.16.2",
     "jquery": "3.7.1",
     "notifications-node-client": "8.1.0",
