--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
     "start": "govuk-prototype-kit start"
   },
   "dependencies": {
+    "@govuk-prototype-kit/common-templates": "2.0.1",
     "@govuk-prototype-kit/task-list": "2.0.0",
     "@x-govuk/govuk-prototype-components": "^3.0.5",
     "govuk-frontend": "^5.3.1",
     "govuk-prototype-kit": "13.16.2",
     "jquery": "3.7.1",
-    "notifications-node-client": "8.1.0",
+    "notifications-node-client": "8.2.0",
     "radio-button-redirect": "^1.2.0"
   }
 }
