--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@x-govuk/govuk-prototype-filters": "^1.4.2",
     "govuk-frontend": "^5.6.0",
     "govuk-prototype-kit": "13.16.2",
+    "nunjucks-date-filter": "^0.1.1",
     "radio-button-redirect": "^1.2.0"
   }
 }
