--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "dependencies": {
     "@govuk-prototype-kit/common-templates": "2.0.1",
     "@x-govuk/govuk-prototype-components": "^3.0.7",
-    "@x-govuk/govuk-prototype-filters": "^1.4.2",
+    "@x-govuk/govuk-prototype-filters": "1.4.3",
     "govuk-frontend": "^5.6.0",
     "govuk-prototype-kit": "13.16.2",
     "nunjucks-date-filter": "^0.1.1",
